--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "prettier all": "prettier --write ./**/*.{ts,tsx,js,css}"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
+    "@types/styled-components": "^5.1.14",
+    "css-loader": "^6.2.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "prettier": "^2.4.0",
+    "prettier": "^2.4.1",
     "typescript": "4.4.3"
   }
 }
