--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "classnames": "^2.3.1",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
+    "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-use-window-width": "^1.0.5",
+    "react-scrolllock": "^5.0.1",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
