--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-use-window-width": "^1.0.5",
+    "react-particles-js": "^3.5.3",
     "react-scrolllock": "^5.0.1",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "tsparticles": "^1.35.1"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
