--- a/package.json
+++ b/package.json
@@ -10,22 +10,29 @@
     "prettier all": "prettier --write ./**/*.{ts,tsx,js,css}"
   },
   "dependencies": {
-    "@zeit/next-sass": "^1.0.1",
+    "@types/react-vertical-timeline-component": "^3.0.1",
     "classnames": "^2.3.1",
     "framer-motion": "^4.1.17",
+    "gray-matter": "^4.0.3",
     "next": "11.1.2",
     "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-use-window-width": "^1.0.5",
+    "react-html-parser": "^2.0.2",
+    "react-image-gallery": "^1.2.7",
     "react-particles-js": "^3.5.3",
     "react-scrolllock": "^5.0.1",
+    "react-vertical-timeline-component": "^3.3.3",
     "styled-components": "^5.3.1",
     "tsparticles": "^1.35.1"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
+    "@types/react-html-parser": "^2.0.2",
+    "@types/react-image-gallery": "^1.0.5",
     "@types/styled-components": "^5.1.14",
+    "@zeit/next-css": "^1.0.1",
     "css-loader": "^6.2.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
