--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "prettier all": "prettier --write ./**/*.{ts,tsx,js,css}"
   },
   "dependencies": {
+    "@formspree/react": "^2.2.4",
     "@types/react-vertical-timeline-component": "^3.0.1",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "gray-matter": "^4.0.3",
     "next": "11.1.2",
