--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ cache:
   directories:
     - node_modules # Cache the node_modules folder for quicker build times
 script:
-  - node -v
-  - npm run build # Runs next build
-  - npm run export # Runs next export and generates the out directory
+  - next build # Runs next build
+  - next export # Runs next export and generates the out directory
   - touch out/.nojekyll # Creates a file telling Github not to build the project using Jekyll
 deploy:
   provider: pages # Informs Travis this is a deployment to GitHub Pages
