--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "it-animals-site",
   "version": "0.1.0",
-  "homepage": "/it-animals-site",
+  "homepage": "./it-animals-site",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": " next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
