--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "it-animals-site",
   "version": "0.1.0",
-  "homepage": "./it-animals-site",
+  "homepage": "https://github.com/it-animals/it-animals-site/",
   "private": true,
   "scripts": {
     "dev": " next dev",
